--- a/Oh-Gili/View/Base.lproj/Main.storyboard
+++ b/Oh-Gili/View/Base.lproj/Main.storyboard
@@ -554,6 +554,47 @@
             </objects>
             <point key="canvasLocation" x="1504" y="1592"/>
         </scene>
+        <!--Block User List View Controller-->
+        <scene sceneID="qVI-a2-dVs">
+            <objects>
+                <viewController id="Vi5-Nq-Tlh" customClass="BlockUserListViewController" customModule="Oh_Gili" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zba-3K-Soe">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fT6-ls-ica">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="d2u-Qe-t3Y">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="d2u-Qe-t3Y" id="qpV-nc-98I">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="jIF-a6-BBQ" firstAttribute="bottom" secondItem="fT6-ls-ica" secondAttribute="bottom" id="3aH-bZ-xmk"/>
+                            <constraint firstItem="fT6-ls-ica" firstAttribute="top" secondItem="jIF-a6-BBQ" secondAttribute="top" id="JOu-FF-Jeq"/>
+                            <constraint firstItem="fT6-ls-ica" firstAttribute="leading" secondItem="jIF-a6-BBQ" secondAttribute="leading" id="Mcw-Vt-0D1"/>
+                            <constraint firstItem="jIF-a6-BBQ" firstAttribute="trailing" secondItem="fT6-ls-ica" secondAttribute="trailing" id="ipM-FN-thc"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="jIF-a6-BBQ"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="OHS-rn-cCN"/>
+                    <connections>
+                        <outlet property="blockUserListTableView" destination="fT6-ls-ica" id="x0z-ce-gt3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zbh-xL-SmW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2275" y="1592"/>
+        </scene>
         <!--Setting View Controller-->
         <scene sceneID="VPE-vR-y1u">
             <objects>
@@ -613,39 +654,25 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="07z-Yy-qn1">
-                                <rect key="frame" x="57" y="359" width="300" height="40"/>
+                                <rect key="frame" x="57" y="389" width="300" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="oNg-lF-Hag"/>
                                 </constraints>
-                                <state key="normal" title="ブロックユーザーを解除" backgroundImage="btn"/>
+                                <state key="normal" title="ブロックユーザーリスト" backgroundImage="btn"/>
                                 <connections>
-                                    <action selector="imageChoiceButton:" destination="Uvy-lx-yhQ" eventType="touchUpInside" id="XLP-PY-f7T"/>
+                                    <segue destination="Vi5-Nq-Tlh" kind="presentation" id="e9W-EV-zV7"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1q2-wT-llb">
-                                <rect key="frame" x="57" y="399" width="300" height="453"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="300" id="HKg-vG-4qJ"/>
-                                </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="07z-Yy-qn1" firstAttribute="top" secondItem="JPA-uS-LkQ" secondAttribute="bottom" constant="30" id="2Hd-12-qBx"/>
+                            <constraint firstItem="07z-Yy-qn1" firstAttribute="top" secondItem="JPA-uS-LkQ" secondAttribute="bottom" constant="60" id="2Hd-12-qBx"/>
                             <constraint firstItem="gqb-0f-Ugc" firstAttribute="top" secondItem="jTP-b6-1LV" secondAttribute="bottom" constant="10" id="3P8-Yp-97m"/>
-                            <constraint firstItem="1q2-wT-llb" firstAttribute="centerX" secondItem="GA1-29-cI9" secondAttribute="centerX" id="7SL-MP-WxK"/>
                             <constraint firstItem="n7I-xW-eHq" firstAttribute="top" secondItem="gqb-0f-Ugc" secondAttribute="bottom" constant="10" id="JkH-Qh-7PJ"/>
                             <constraint firstItem="07z-Yy-qn1" firstAttribute="centerX" secondItem="GA1-29-cI9" secondAttribute="centerX" id="Nsh-5m-upf"/>
                             <constraint firstItem="oS9-f4-rLx" firstAttribute="top" secondItem="n7I-xW-eHq" secondAttribute="bottom" constant="20" id="R59-Hb-I23"/>
-                            <constraint firstItem="1q2-wT-llb" firstAttribute="top" secondItem="07z-Yy-qn1" secondAttribute="bottom" id="Rdq-Oo-Aqs"/>
                             <constraint firstItem="JPA-uS-LkQ" firstAttribute="centerX" secondItem="GA1-29-cI9" secondAttribute="centerX" id="XKQ-aC-xgZ"/>
                             <constraint firstItem="gqb-0f-Ugc" firstAttribute="centerX" secondItem="GA1-29-cI9" secondAttribute="centerX" id="dW9-4g-SPp"/>
-                            <constraint firstItem="9xA-4R-MTV" firstAttribute="bottom" secondItem="1q2-wT-llb" secondAttribute="bottom" constant="10" id="j1H-UO-Gna"/>
                             <constraint firstItem="jTP-b6-1LV" firstAttribute="centerX" secondItem="GA1-29-cI9" secondAttribute="centerX" id="ooL-8f-b0A"/>
                             <constraint firstItem="oS9-f4-rLx" firstAttribute="centerX" secondItem="GA1-29-cI9" secondAttribute="centerX" id="rBn-xk-HpY"/>
                             <constraint firstItem="n7I-xW-eHq" firstAttribute="centerX" secondItem="GA1-29-cI9" secondAttribute="centerX" id="wI0-37-LRf"/>
@@ -655,7 +682,6 @@
                         <viewLayoutGuide key="safeArea" id="9xA-4R-MTV"/>
                     </view>
                     <connections>
-                        <outlet property="blockListView" destination="1q2-wT-llb" id="Heq-l4-dKb"/>
                         <outlet property="displayNameLabel" destination="jTP-b6-1LV" id="bov-z8-KjM"/>
                         <outlet property="displayNameTextField" destination="gqb-0f-Ugc" id="dwj-Nh-esA"/>
                         <outlet property="imageView" destination="oS9-f4-rLx" id="UgA-OI-R9e"/>
