--- a/Oh-Gili/View/Base.lproj/Main.storyboard
+++ b/Oh-Gili/View/Base.lproj/Main.storyboard
@@ -739,9 +739,24 @@
                     <view key="view" contentMode="scaleToFill" id="gmf-sn-kFj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pKV-Un-WXI">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="pKV-Un-WXI" firstAttribute="top" secondItem="aV9-EQ-gQH" secondAttribute="top" id="3Zn-ir-bEf"/>
+                            <constraint firstItem="pKV-Un-WXI" firstAttribute="leading" secondItem="aV9-EQ-gQH" secondAttribute="leading" id="7QW-qn-taW"/>
+                            <constraint firstItem="aV9-EQ-gQH" firstAttribute="bottom" secondItem="pKV-Un-WXI" secondAttribute="bottom" id="IFy-Ge-6fZ"/>
+                            <constraint firstItem="aV9-EQ-gQH" firstAttribute="trailing" secondItem="pKV-Un-WXI" secondAttribute="trailing" id="nBE-Ci-vlO"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="aV9-EQ-gQH"/>
                     </view>
+                    <connections>
+                        <outlet property="notificationTableView" destination="pKV-Un-WXI" id="L5M-w7-sVC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gWg-qB-wc4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
