--- a/Oh-Gili/View/PostTableViewCell.xib
+++ b/Oh-Gili/View/PostTableViewCell.xib
@@ -9,46 +9,46 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="277" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Oh_Gili" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="363" height="277"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="231" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Oh_Gili" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="363" height="231"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="363" height="277"/>
+                <rect key="frame" x="0.0" y="0.0" width="363" height="231"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aHM-SP-V16">
-                        <rect key="frame" x="10" y="10" width="50" height="50"/>
+                        <rect key="frame" x="10" y="10" width="40" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="6HR-KN-TRj"/>
-                            <constraint firstAttribute="height" constant="50" id="Puc-EX-40M"/>
+                            <constraint firstAttribute="width" constant="40" id="6HR-KN-TRj"/>
+                            <constraint firstAttribute="height" constant="40" id="Puc-EX-40M"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                <integer key="value" value="25"/>
+                                <integer key="value" value="20"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HQm-46-AgZ">
-                        <rect key="frame" x="70" y="10" width="283" height="21"/>
+                        <rect key="frame" x="60" y="10" width="293" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="日時" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hhh-hx-aWs">
-                        <rect key="frame" x="70" y="31" width="283" height="16"/>
+                        <rect key="frame" x="60" y="31" width="293" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YEU-fi-uoc">
-                        <rect key="frame" x="10" y="113.5" width="150" height="150"/>
+                        <rect key="frame" x="10" y="96.5" width="100" height="100"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="YEU-fi-uoc" secondAttribute="height" multiplier="1:1" id="aWH-Qx-rQg"/>
-                            <constraint firstAttribute="height" constant="150" id="xwk-nf-4En"/>
+                            <constraint firstAttribute="height" constant="100" id="xwk-nf-4En"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uhD-XO-SYd">
-                        <rect key="frame" x="170" y="113.5" width="50" height="50"/>
+                        <rect key="frame" x="120" y="96.5" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="50" id="A9Q-vX-FPz"/>
                             <constraint firstAttribute="width" constant="50" id="YAp-FF-i8Y"/>
@@ -56,7 +56,7 @@
                         <state key="normal" image="座布団（白黒）"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GsQ-m1-X2c">
-                        <rect key="frame" x="220" y="123.5" width="30" height="30"/>
+                        <rect key="frame" x="170" y="106.5" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="Kd6-8H-g1O"/>
                             <constraint firstAttribute="height" constant="30" id="N2I-x2-sb8"/>
@@ -66,16 +66,16 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="キャプション" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K6L-87-4wc">
-                        <rect key="frame" x="30" y="70" width="300" height="33.5"/>
+                        <rect key="frame" x="30" y="60" width="300" height="26.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="300" id="iZl-Fa-9d0"/>
                         </constraints>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="17g-TW-AxD">
-                        <rect key="frame" x="180" y="173.5" width="30" height="30"/>
+                        <rect key="frame" x="130" y="156.5" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="Ikf-BU-c7a"/>
                             <constraint firstAttribute="height" constant="30" id="O8D-BV-zBk"/>
@@ -83,7 +83,7 @@
                         <state key="normal" image="like_exist"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jac-EM-BZZ">
-                        <rect key="frame" x="220" y="173.5" width="30" height="30"/>
+                        <rect key="frame" x="170" y="156.5" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="9NO-FL-v5x"/>
                             <constraint firstAttribute="width" constant="30" id="DXh-TW-6V9"/>
@@ -128,7 +128,7 @@
                 <outlet property="zabutonButton" destination="uhD-XO-SYd" id="Z2N-pS-e6x"/>
                 <outlet property="zabutonLabel" destination="GsQ-m1-X2c" id="pwh-7A-Izy"/>
             </connections>
-            <point key="canvasLocation" x="99.275362318840592" y="92.745535714285708"/>
+            <point key="canvasLocation" x="99.275362318840592" y="77.34375"/>
         </tableViewCell>
     </objects>
     <resources>
