--- a/Oh-Gili/View/PostTableViewCell.xib
+++ b/Oh-Gili/View/PostTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -92,16 +92,51 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="04h-YM-Wlh">
+                        <rect key="frame" x="220" y="151.5" width="40" height="40"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="5id-a3-Hzc"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="rro-U3-XAS"/>
+                        </constraints>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <state key="normal" image="square.and.arrow.up" catalog="system">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="20"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N2B-Bi-gKU">
+                        <rect key="frame" x="260" y="112" width="29.5" height="19.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="吹き出し２" translatesAutoresizingMaskIntoConstraints="NO" id="92h-xm-ZQt">
+                        <rect key="frame" x="220" y="106.5" width="40" height="30"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="e5J-JT-KVJ"/>
+                            <constraint firstAttribute="height" constant="30" id="eSk-Wt-b2q"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Hhh-hx-aWs" secondAttribute="trailing" constant="10" id="0ws-cj-fZw"/>
+                    <constraint firstItem="N2B-Bi-gKU" firstAttribute="leading" secondItem="92h-xm-ZQt" secondAttribute="trailing" id="62f-L6-pPS"/>
+                    <constraint firstItem="92h-xm-ZQt" firstAttribute="centerY" secondItem="uhD-XO-SYd" secondAttribute="centerY" id="7DT-Tx-uSS"/>
                     <constraint firstItem="GsQ-m1-X2c" firstAttribute="centerY" secondItem="uhD-XO-SYd" secondAttribute="centerY" id="80L-tx-aOy"/>
                     <constraint firstItem="K6L-87-4wc" firstAttribute="top" secondItem="aHM-SP-V16" secondAttribute="bottom" constant="10" id="8ie-Bk-mIB"/>
+                    <constraint firstItem="92h-xm-ZQt" firstAttribute="leading" secondItem="GsQ-m1-X2c" secondAttribute="trailing" constant="20" id="CpC-cK-tTo"/>
                     <constraint firstItem="aHM-SP-V16" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Cxp-R0-4aa"/>
                     <constraint firstItem="Hhh-hx-aWs" firstAttribute="top" secondItem="HQm-46-AgZ" secondAttribute="bottom" id="Eqx-Ax-MA5"/>
                     <constraint firstItem="YEU-fi-uoc" firstAttribute="top" secondItem="K6L-87-4wc" secondAttribute="bottom" constant="10" id="LEj-OA-cYS"/>
                     <constraint firstItem="jac-EM-BZZ" firstAttribute="centerY" secondItem="17g-TW-AxD" secondAttribute="centerY" id="PpR-b3-7kz"/>
                     <constraint firstItem="uhD-XO-SYd" firstAttribute="leading" secondItem="YEU-fi-uoc" secondAttribute="trailing" constant="10" id="Tda-Ch-hzm"/>
+                    <constraint firstItem="04h-YM-Wlh" firstAttribute="leading" secondItem="jac-EM-BZZ" secondAttribute="trailing" constant="20" id="Vn2-h7-0id"/>
                     <constraint firstItem="YEU-fi-uoc" firstAttribute="leading" secondItem="aHM-SP-V16" secondAttribute="leading" id="W88-dx-i5m"/>
                     <constraint firstAttribute="trailing" secondItem="HQm-46-AgZ" secondAttribute="trailing" constant="10" id="Wc2-Ka-m2D"/>
                     <constraint firstItem="17g-TW-AxD" firstAttribute="top" secondItem="uhD-XO-SYd" secondAttribute="bottom" constant="10" id="XJu-AJ-2BD"/>
@@ -109,22 +144,26 @@
                     <constraint firstItem="aHM-SP-V16" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="czB-zs-dNh"/>
                     <constraint firstItem="uhD-XO-SYd" firstAttribute="top" secondItem="K6L-87-4wc" secondAttribute="bottom" constant="10" id="e4R-Ac-Eu9"/>
                     <constraint firstItem="Hhh-hx-aWs" firstAttribute="leading" secondItem="aHM-SP-V16" secondAttribute="trailing" constant="10" id="e63-Ns-0Yn"/>
+                    <constraint firstItem="04h-YM-Wlh" firstAttribute="centerY" secondItem="17g-TW-AxD" secondAttribute="centerY" id="fRy-oK-i7A"/>
                     <constraint firstItem="17g-TW-AxD" firstAttribute="centerX" secondItem="uhD-XO-SYd" secondAttribute="centerX" id="gT6-w3-rk0"/>
                     <constraint firstItem="K6L-87-4wc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="jb7-x7-9Jw"/>
                     <constraint firstItem="GsQ-m1-X2c" firstAttribute="leading" secondItem="uhD-XO-SYd" secondAttribute="trailing" id="nHt-6C-YBn"/>
                     <constraint firstItem="HQm-46-AgZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="pyx-Qj-HhP"/>
+                    <constraint firstItem="N2B-Bi-gKU" firstAttribute="centerY" secondItem="92h-xm-ZQt" secondAttribute="centerY" id="uJd-af-hka"/>
                     <constraint firstItem="jac-EM-BZZ" firstAttribute="leading" secondItem="17g-TW-AxD" secondAttribute="trailing" constant="10" id="uVl-BA-f99"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="captionLabel" destination="K6L-87-4wc" id="taB-9Q-MSt"/>
+                <outlet property="commentCountLabel" destination="N2B-Bi-gKU" id="RnG-YV-8E3"/>
                 <outlet property="dateLabel" destination="Hhh-hx-aWs" id="CQ4-Mh-1KI"/>
                 <outlet property="likeButton" destination="17g-TW-AxD" id="KfB-ft-TMB"/>
                 <outlet property="likeLabel" destination="jac-EM-BZZ" id="kuK-wo-kyg"/>
                 <outlet property="nameLabel" destination="HQm-46-AgZ" id="Ah1-Y3-A9z"/>
                 <outlet property="postImageView" destination="YEU-fi-uoc" id="DyC-zw-Jxi"/>
                 <outlet property="profileImageView" destination="aHM-SP-V16" id="okz-in-Vug"/>
+                <outlet property="shareButton" destination="04h-YM-Wlh" id="SPg-zk-pXl"/>
                 <outlet property="zabutonButton" destination="uhD-XO-SYd" id="Z2N-pS-e6x"/>
                 <outlet property="zabutonLabel" destination="GsQ-m1-X2c" id="pwh-7A-Izy"/>
             </connections>
@@ -133,6 +172,8 @@
     </objects>
     <resources>
         <image name="like_exist" width="40" height="40"/>
+        <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
+        <image name="吹き出し２" width="120" height="120"/>
         <image name="座布団（白黒）" width="41" height="38.333332061767578"/>
     </resources>
 </document>
